fix the alignment

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,37 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+.top {
+  display: flex;
+  gap: 20px;
+}
+
+.icon {
+  margin-left: 15px;
+  margin-top: 10px;
+}
+
+.header {
+  font-size: 1.2em;
+  font-weight: 800;
+  margin-top: 12px;
+  margin-right: 50px;
+}
+
+.close-button {
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+.text {
+  margin-left: 77px;
+  text-align: left;
+  margin-bottom: 20px;
+  padding-right: 20px;
+}
+
+.bottom {
+  margin-left: 77px;
+  margin-bottom: 20px;
+}
